Search Pages Completed: Select Option Added

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@fontsource/manrope": "^4.5.13",
     "@fontsource/roboto": "^4.5.8",
-    "@headlessui/react": "^1.7.8",
+    "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
