Process Module: 2 Steps Page Completed

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/inter": "^4.5.15",
     "@fontsource/manrope": "^4.5.13",
     "@fontsource/roboto": "^4.5.8",
     "@headlessui/react": "^1.7.10",
@@ -10,13 +11,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.1.7",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^1.2.1",
     "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-step-progress-bar": "^1.0.3",
     "react-tailwindcss-select": "^1.6.0",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
