Circular Progress bar done & Process

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.14",
+    "@react-pdf-viewer/core": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,9 +16,7 @@
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
-    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
-    "react-file-viewer": "^1.2.1",
     "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
